--- a/fw/Cargo.toml
+++ b/fw/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 rtic = { version = "2", features = ["thumbv7-backend"] }
-rtic-monotonics = { version = "1", default-features = false, features = ["cortex-m-systick"] }
+rtic-monotonics = { version = "1", default-features = false, features = ["cortex-m-systick", "systick-10khz"] }
 
 # Remove these if you don't want logging.
 # imxrt-log = { version = "0.1", default-features = false, features = ["log", "usbd"] }
@@ -25,6 +25,9 @@ teensy4-bsp = { path = "../teensy4-bsp" }
 embedded-hal = "1.0.0"
 static_cell = "2.1.0"
 critical-section = "1.2.0"
+rust-fsm = { version = "0.7.0", default-features = false, features = ["dsl", "rust-fsm-dsl", "diagram"] }
+rtic-sync = "1.3.0"
+bitfield = "0.17.0"
 
 # Don't optimize build dependencies, like proc macros.
 # Helps with build times.
